# face-detect-app

./: .gitignore  Dockerbuildfile  Dockerfile  Dockerrun.aws.json  README.md  db.sqlite3  default.nix  docker-compose.yml  pyproject.toml  renovate.json  requirements.txt  shell.nix  vars.nix
.ebextensions/: 01_database.config  01_initialise.config  02_initialise.config  03_django.config  03_packages.config  db-instance-options.config  db-migrate.config  django.config
.github/: dependabot.yml
.github/workflows/: automerge.yml  test.yml  update-niv.yml
app/: admin.py  cache.py  forms.py  models.py  urls.py  views.py  wsgi.py
app/backends/: concrexit.py
app/management/commands/: thalia_import.py
app/migrations/: 0001_initial.py  0002_userencoding.py  0003_userencoding_description.py  0004_userencoding_matches.py
app/settings/: __init__.py  default.py  docker_compose.py  elastic_beanstalk.py  nix.py
app/static/css/: _navs.scss  _variable-usage.scss  base.scss  main.scss
app/static/js/: main.js
app/templates/app/: album.html  base.html  bootstrap.html  index.html  myphotos.html
face_detection/: admin.py  models.py
face_detection/management/commands/: batch_import.py  detect_person.py  import_image.py
face_detection/migrations/: 0001_initial.py  0002_auto_20191227_1835.py
face_detection/services/: detector.py
nix/: face-detect-app.nix  sources.json
nixos/: configuration.nix  hardware.nix
nixos/cachix/: face-detect-app.nix
resources/: entrypoint.sh  entrypoint_production.sh
templates/registration/: logged_out.html  login.html
(+5 files in other folders)
