[tool.poetry]
name = "face-detection"
version = "0.1.0"
description = ""
authors = ["Sébastiaan <se_bastiaan@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.1"
face_recognition = "^1.2.3"
django-bootstrap4 = "^1.1.1"
awscli = "^1.16.309"
requests = "<2.21"
urllib3 = "<1.25"
python-dateutil = "<2.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
