[tool.poetry]
name = "face-detection"
version = "0.1.0"
description = ""
authors = ["Sébastiaan <se_bastiaan@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.4"
face_recognition = "^1.2.3"
django-bootstrap4 = "^2.0.0"
requests = "<2.26"
urllib3 = "<1.27"
python-dateutil = "<2.8.2"
psycopg2-binary = "^2.8.4"
django-compressor = "^2.4"
django-libsass = "^0.8"
expiringdict = "^1.2.0"
gunicorn = "^20.0.4"
sentry-sdk = "^0.20.0"
django-debug-toolbar = "^3.1.1"

[tool.poetry.dev-dependencies]
black = "19.10b0"
awscli = "^1.16.309"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
